src/test/ui/traits/trait-object-safety.stderr
error[E0038]: the trait `Tr` cannot be made into an object
  --> $DIR/trait-object-safety.rs:15:22
   |
LL |     let _: &dyn Tr = &St;
   |                      ^^^ `Tr` cannot be made into an object
   |
note: for a trait to be "object safe" it needs to allow building a vtable to allow the call to be resolvable dynamically; for more information visit <https://doc.rust-lang.org/reference/items/traits.html#object-safety>
  --> $DIR/trait-object-safety.rs:4:8
   |
LL | trait Tr {
   |       -- this trait cannot be made into an object...
LL |     fn foo();
   |        ^^^ ...because associated function `foo` has no `self` parameter
   = note: required because of the requirements on the impl of `CoerceUnsized<&dyn Tr>` for `&St`
   = note: required by cast to type `&dyn Tr`
help: consider turning `foo` into a method by giving it a `&self` argument
   |
LL |     fn foo(&self);
   |            ^^^^^
help: alternatively, consider constraining `foo` so it does not apply to trait objects
   |
LL |     fn foo() where Self: Sized;
   |              ^^^^^^^^^^^^^^^^^

error[E0038]: the trait `Tr` cannot be made into an object
  --> $DIR/trait-object-safety.rs:15:12
   |
LL |     let _: &dyn Tr = &St;
   |            ^^^^^^^ `Tr` cannot be made into an object
   |
note: for a trait to be "object safe" it needs to allow building a vtable to allow the call to be resolvable dynamically; for more information visit <https://doc.rust-lang.org/reference/items/traits.html#object-safety>
  --> $DIR/trait-object-safety.rs:4:8
   |
LL | trait Tr {
   |       -- this trait cannot be made into an object...
LL |     fn foo();
   |        ^^^ ...because associated function `foo` has no `self` parameter
help: consider turning `foo` into a method by giving it a `&self` argument
   |
LL |     fn foo(&self);
   |            ^^^^^
help: alternatively, consider constraining `foo` so it does not apply to trait objects
   |
LL |     fn foo() where Self: Sized;
   |              ^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0038`.
